--- a/Main.csproj
+++ b/Main.csproj
@@ -21,7 +21,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <TypeScriptToolsVersion>3.7</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>4.0</TypeScriptToolsVersion>
     <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -75,6 +75,7 @@
     <TypeScriptCompile Include="p5js\p5.d.ts" />
     <TypeScriptCompile Include="p5js\p5.global-mode.d.ts" />
     <Content Include="p5js\p5.js" />
+    <Content Include="testApp\index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
