--- a/Main.csproj
+++ b/Main.csproj
@@ -64,6 +64,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="index.html" />
     <Content Include="perf\index.html" />
     <Content Include="OLD\app.css" />
     <Content Include="OLD\Game1\app.css" />
