--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -22,3 +22,9 @@ jobs:
       run: dotnet workload install wasm-tools
     - name: Publish .NET Core Project
       run: dotnet publish wyan.dev/wyan.dev.csproj -c:Release -o:build/
+    - name: Commit wwwroot to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@3.7.1
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: build/wwwroot
