--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -22,6 +22,8 @@ jobs:
       run: dotnet workload install wasm-tools
     - name: Publish .NET Core Project
       run: dotnet publish wyan.dev/wyan.dev.csproj -c:Release -o:build/
+    - name: Setup Pages
+      uses: actions/configure-pages@v3
     - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v1.0.8
       with: 
