--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v1.0.8
       with: 
-        path: build/
+        path: build/wwwroot
     - name: Deploy GitHub Pages site
       uses: actions/deploy-pages@v2.0.1
       id: deployment
