--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -26,20 +26,44 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+    
     - name: Install .NET WASM Build Tools
       run: dotnet workload install wasm-tools
+    
     - name: Publish .NET Core Project
       run: dotnet publish wyan.dev/wyan.dev.csproj -c:Release -o:build/
+    
+    - name: Checkout SF
+      uses: actions/checkout@v3
+      with:
+        repository: https://github.com/Redninja106/simulationframework
+        path: repos/simulationframework
+    
+    - name: Build SF
+      run: dotnet build -c release
+      
+    - name: Setup docfx
+      run: dotnet tool update -g docfx
+    
+    - name: Build SF Docs
+      run: docfx
+      
+    - name: Copy to site output
+      run: cp -r repos/simulationframework/_site build/wwwroot/simulationframework 
+      
     - name: Setup Pages
       uses: actions/configure-pages@v3
+    
     - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v1.0.8
       with: 
         path: build/wwwroot
+    
     - name: Deploy GitHub Pages site
       uses: actions/deploy-pages@v2.0.1
       id: deployment
